[package]
name = "bvh"
version = "0.1.0"
authors = ["Mick van Gelderen <mickvangelderen@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tobj = "0.1.11"
env_logger = "0.7.1"
log = "0.4.8"
gl-typed = { git = "https://github.com/mickvangelderen/gl-typed-rust", branch = "master" }
glutin = "0.22.0"
num-traits = "*"
nalgebra = "*"
